<resources>
    <string name="app_name">El Rebost</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_detall_prod_buscats">DetallProdBuscatsActivity</string>
    <string name="tab_text_1">Detalle</string>
    <string name="tab_text_2">Ingredientes</string>
    <string name="tab_text_3">Nutrición</string>
    <string name="tab_text_4">Imágenes</string>

    /*** PlaceholderFragment.kt ***/
    <string name="nova_group_1">Alimentos no procesados o mínimamente procesados</string>
    <string name="nova_group_2">Ingredientes culinarios procesados</string>
    <string name="nova_group_3">Alimentos procesados</string>
    <string name="nova_group_4">Alimentos y bebidas ultraprocesados</string>
    <string name="nova_group_0">Sin información NOVA</string>
    <string name="nutriscore_0">Sin información de NutriScore</string>

    <string name="valor_energetico">Valor Energético</string>
    <string name="grasas">Grasas</string>
    <string name="grasas_sat">Grasas Saturadas</string>
    <string name="hidratos_carbono">Hidratos de Carbono</string>
    <string name="proteinas">Proteinas</string>
    <string name="azucar">Azúcar </string>
    <string name="sal">Sal </string>
    <string name="sodi">Sodio </string>
    <string name="low">En bajas cantidades</string>
    <string name="moderate">En cantidades moderadas</string>
    <string name="high">En altas cantidades</string>
    <string name="titolcategories">Categorias:</string>
    <string name="titolNutrientes_100gr">Nutrientes por 100gr:</string>
    <string name="txttitol_tuPuntuacion">Tu Puntuación:</string>

    <string name="clasificacion_nova">La clasificación NOVA asigna un grupo a los productos alimenticios basándose en cuánto han sido procesados a partir de:</string>
    <string name="clasificacion_nutriscore">El Nutri-Score es un logotipo que muestra la calidad nutricional de los productos alimenticios con grados de A a E.
        Con el NutriScore, los productos se pueden comparar fácil y rápidamente. El grado de Nutri-Score está determinado por la cantidad de nutrientes saludables
        y no saludables:
        Puntos negativos: energía, grasa saturada, azúcares, sodio (niveles altos se consideran poco saludables)
        Puntos positivos: la proporción de frutas, verduras y nueces, aceites de oliva, colza y nueces, fibras y proteínas (en altos niveles
        se consideran buenos para la salud).
    </string>
    <string name="txt_titolIngredients">Ingredientes: </string>
    <string name="txt_titolNutricio">Tabla Nutricional: </string>
    <string name="txt_sin_ingredientes">No se han encontrado los Ingredientes</string>
    <string name="txt_sin_nutrientes">Todavía no tenemos información</string>

    <string name="titulo_Llistes">Selecciona una Lista</string>
    <string name="titulo_AfegirLlista">Añadir Lista</string>
    <string name="SB_ProducteAfegitaLlista">"Producto añadido a: "</string>
    <string name="SB_YaExisteenLista">El producto ya existe en: </string>
    <string name="titulo_AfegirALlista">Añadir a Lista</string>
    <string name="EliminardeLista">Eliminar de Lista</string>
    <string name="ERR_RED">Error de red. Inténtalo más tarde.</string>
    <string name="ERR_PRODUCTO_DESCONOCIDO">Producto no Encontrado</string>
    <string name="ERR_TEXTO_LISTA_VACIO">ERROR al añadir Lista: El nombre de la Lista no puede estar vacío</string>
    <string name="ERR_TEXTO_UBIC_VACIO">ERROR al añadir Ubicación: El nombre de la Ubicación no puede estar vacío</string>
    <string name="SB_EnDesarrollo">Apartado en Desarrollo</string>
    <string name="SB_LlistaAfegida">Lista añadida correctamente</string>
    <string name="SB_LlistaActualizada">Lista Actualizada</string>
    <string name="ERR_TEXTO_LISTA_DUPLICADO">Ya existe una lista con el mismo nombre</string>
    <string name="ERROR_NO_SE_PUEDE_ELIMNAR">Error: No se pueden eliminar las listas de la compra, Rebost y Caducados</string>
    <string name="TXT_BUSCA">Busca</string>
    <string name="TXT_FILTRO">Filtro</string>
    <string name="TXT_TITOL_DATESCADUCITAT">Listado de Fechas de Caducidad</string>
    <string name="actualizar_cantidad">Actulizar cantidad?</string>
    <string name="SB_Cantidad_Actualizada">Cantidad Actulizada</string>
    <string name="titol_gestiona_cantidad">Gestiona Cantidad</string>
    <string name="titol_gestiona_ubicacion">Gestiona Ubicación</string>
    <string name="titol_guardar_cambios">Guardar Cambios?</string>
    <string name="titol_sortir_aplicacio">Salir de la aplicación?</string>
    <string name="titol_gestiona_fechas">Gestiona Fechas de Caducidad</string>
    <string name="SB_ProductoYaExiste">ERROR: El producto ya existe en la lista:</string>
    <string name="SB_ProductoYaExisteConMismaFecha">"ERROR: Ya existe el producto con la misma fecha de caducidad en la lista: "</string>

    <string-array name="array_orden">
        <item>Puntuación</item>
        <item>Sabor</item>
        <item>Favorito</item>
        <item>Nombre</item>
        <item>Marca</item>
        <item>Popularidad</item>
    </string-array>

    <string-array name="array_filtro_lista_compra">
        <item>Ver Todos</item>
        <item>Ver Pendientes de Comprar</item>
        <item>Ver Comprados</item>
    </string-array>

    //MENU NAVIGATION BOTTOM MAIN
    <string name="imHome">Home</string>
    <string name="Titol_AddToList">Añadir a Lista</string>
    <string name="titulo_AfegirUbicacio">Añadir Ubicación</string>
    <string name="titulo_ubicacion">Selecciona Ubicación</string>
    <string name="ERR_UBICACION_EXISTE">ERROR: Ya existe una Ubicación con el mismo Nombre</string>
    <string name="ver">VER</string>
    <string name="ver_lista">VER LISTA</string>
    <string name="ERR_NOM_UBICACIO_OBLIGATORI">El Nombre de la Ubicación no puede estar vacío</string>

    //LOGIN
    <string name="email">Correo</string>
    <string name="password">Contraseña</string>
    <string name="recuperarpassword">Recuperar Contraseña</string>
    <string name="forgotPassword">Olvidaste tu contraseña?</string>
    <string name="firstName">Nombre</string>
    <string name="lastName">Apellido</string>
    <string name="login">Iniciar sesión</string>
    <string name="createAct">Crear cuenta</string>
    <string name="loginGoogle">Iniciar sesión con Google</string>
    <string name="error_conexion">No se ha podido conectar</string>
    <string name="error_login">Error al hacer Login</string>
    <string name="default_notification_channel_id">1001</string>
    <string name="service_title">Mi servicio</string>
    <string name="existe_backup">Existe Copia de Seguridad</string>
    <string name="copia_recuperada">Copia de Seguridad recuperada con éxito</string>
    <string name="backup">Copia de Seguridad</string>
    <string name="user_logueado">Usuario Conectado:</string>
    <string name="olvidar_Cuenta">Eliminar Cuenta</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="limpiar_comprados">Limpiar comprados</string>
    <string name="enviar_a_lista">Enviar a Lista</string>
    <string name="cambiar_vista">Cambiar Vista</string>
    <string name="ERROR_NO_SE_PUEDE_ELIMNAR_UBICACION">No se puede eliminar la Ubicación por defecto</string>
    <string name="existen_productos">Existen artículos</string>
    <string name="ubicacion_no_vacía">Los artículos de esta ubicación se moverán a la ubicación por defecto</string>

</resources>