<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.RegisterActivity">


    <EditText
        android:id="@+id/txtName"
        style="@style/viewCustom"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/firstName"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtLastName"
        style="@style/viewCustom"
        android:layout_width="0dp"
        android:layout_marginTop="16dp"
        android:hint="@string/lastName"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/txtName"
        app:layout_constraintStart_toStartOf="@+id/txtName"
        app:layout_constraintTop_toBottomOf="@+id/txtName" />

    <EditText
        android:id="@+id/txtEmail"
        style="@style/viewCustom"
        android:layout_width="0dp"
        android:layout_marginTop="16dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/txtLastName"
        app:layout_constraintStart_toStartOf="@+id/txtLastName"
        app:layout_constraintTop_toBottomOf="@+id/txtLastName" />

    <EditText
        android:id="@+id/txtPassword"
        style="@style/viewCustom"
        android:layout_width="0dp"
        android:layout_marginTop="16dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/txtEmail"
        app:layout_constraintStart_toStartOf="@+id/txtEmail"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail" />

    <Button
        android:id="@+id/btnRegistrarUser"
        style="@style/viewCustom"
        android:layout_width="0dp"
        android:layout_marginTop="32dp"
        android:background="@color/primaryColor"
        android:text="@string/createAct"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/txtPassword"
        app:layout_constraintStart_toStartOf="@+id/txtPassword"
        app:layout_constraintTop_toBottomOf="@+id/txtPassword" />


</androidx.constraintlayout.widget.ConstraintLayout>